force-app/main/default/objects/Personagem__c/Personagem__c.object-meta.xml
<CustomObject>
    <label>Personagem</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personagens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>