force-app/main/default/objects/Personagem__c/fields/Animago__c.field-meta.xml
<CustomField>
    <fullName>Animago__c</fullName>
    <label>Animago</label>
    <length>100</length>
    <type>Text</type>
</CustomField>