force-app/main/default/objects/Personagem__c/fields/Apelido__c.field-meta.xml
<CustomField>
    <fullName>Apelido__c</fullName>
    <label>Apelido</label>
    <length>100</length>
    <type>Text</type>
</CustomField>