force-app/main/default/objects/Personagem__c/fields/Armada_de_Dumbledore__c.field-meta.xml
<CustomField>
    <fullName>Armada_de_Dumbledore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Armada de Dumbledore</label>
    <type>Checkbox</type>
</CustomField>