force-app/main/default/objects/Personagem__c/fields/Casa_de_Hogwarts__c.field-meta.xml
<CustomField>
    <fullName>Casa_de_Hogwarts__c</fullName>
    <label>Casa de Hogwarts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gryffindor</fullName>
            </value>
            <value>
                <fullName>Ravenclaw</fullName>
            </value>
            <value>
                <fullName>Slytherin</fullName>
            </value>
            <value>
                <fullName>Hufflepuff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>