force-app/main/default/objects/Personagem__c/fields/Comensal_da_Morte__c.field-meta.xml
<CustomField>
    <fullName>Comensal_da_Morte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comensal da Morte</label>
    <type>Checkbox</type>
</CustomField>