force-app/main/default/objects/Personagem__c/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <label>Escola</label>
    <length>100</length>
    <type>Text</type>
</CustomField>