force-app/main/default/objects/Personagem__c/fields/Especie__c.field-meta.xml
<CustomField>
    <fullName>Especie__c</fullName>
    <label>Espécie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>