force-app/main/default/objects/Personagem__c/fields/Forma_do_Bicho_Papao__c.field-meta.xml
<CustomField>
    <fullName>Forma_do_Bicho_Papao__c</fullName>
    <label>Forma do Bicho Papão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>