force-app/main/default/objects/Personagem__c/fields/Id_API__c.field-meta.xml
<CustomField>
    <fullName>Id_API__c</fullName>
    <externalId>true</externalId>
    <label>Id API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>