force-app/main/default/objects/Personagem__c/fields/Ministerio_da_Magia__c.field-meta.xml
<CustomField>
    <fullName>Ministerio_da_Magia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ministério da Magia</label>
    <type>Checkbox</type>
</CustomField>