force-app/main/default/objects/Personagem__c/fields/Ordem_da_Fenix__c.field-meta.xml
<CustomField>
    <fullName>Ordem_da_Fenix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordem da Fênix</label>
    <type>Checkbox</type>
</CustomField>