force-app/main/default/objects/Personagem__c/fields/Papel_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Papel_Cargo__c</fullName>
    <label>Papel/Cargo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>