force-app/main/default/objects/Personagem__c/fields/Patrono__c.field-meta.xml
<CustomField>
    <fullName>Patrono__c</fullName>
    <label>Patrono</label>
    <length>100</length>
    <type>Text</type>
</CustomField>