force-app/main/default/objects/Personagem__c/fields/Sangue__c.field-meta.xml
<CustomField>
    <fullName>Sangue__c</fullName>
    <label>Sangue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pure-blood</fullName>
            </value>
            <value>
                <fullName>half-blood</fullName>
            </value>
            <value>
                <fullName>muggle-born</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>