force-app/main/default/objects/Personagem__c/fields/Varinha__c.field-meta.xml
<CustomField>
    <fullName>Varinha__c</fullName>
    <label>Varinha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>